# DAML-proj

./: .gitignore  README.md  pyproject.toml
_00_base/: 0b_histo_data_visualization.ipynb  1a_CT_resnet18_multi.ipynb  1b_histo_resnet18_multi.ipynb  2a_CT_resnet18_bi.ipynb  Lung.ipynb  README.md  pyproject.toml  transform_data.ipynb
_00_base/modules/: augmenting.py  custom_transforms.py  strings.py  training.py
_01_gnn_example/: 00_data_viz.ipynb  01_single_iteration.ipynb  02_bayesopt.ipynb  03_testing_best_models.ipynb  graphdataset.py  readme.md
_02_gnn_example2/: 01_start.ipynb  02_graphconv.ipynb  03_newdataset.ipynb  loader.py  readme.md
_03_baseline_cnn/: 00_dataviz.ipynb  01_feature_extraction.ipynb  02_training.ipynb  03_with_PCA.ipynb
_04_mnist_digits/: 00_dataviz.ipynb  01_graph_dataset_constr.ipynb  01b_voronoi.ipynb  02_train.ipynb  03_adding_centroids.ipynb  04_see_model_params.ipynb  graph_dataset.py  test.ipynb
_05_ct_images/: _00_augment.ipynb  _01_make_graph.ipynb  _02_make_dataset.ipynb  _02_make_dataset_and_train.ipynb  test.ipynb
shared/: img_to_graph.py  training.py  utils.py
shared/models/: GNNClassifier.py  __init__.py
