[project]
name = "daml-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bayesian-optimization>=3.0.1",
    "kmapper>=2.1.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchinfo>=1.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
