[project]
name = "daml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "box2d>=2.3.10",
    "box2d-py>=2.3.8",
    "ffmpeg>=1.4",
    "google-cloud-aiplatform>=1.91.0",
    "google-cloud-storage>=2.19.0",
    "graphviz>=0.20.3",
    "gymnasium>=1.1.1",
    "ipython>=8.36.0",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.0",
    "jupyterlab>=4.4.2",
    "keras-core>=0.1.7",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.10.1",
    "nbdime>=4.0.2",
    "nltk>=3.9.1",
    "numexpr>=2.10.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydot>=4.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "tensorboard>=2.14.1",
    "tensorboard-plugin-profile>=2.19.4",
    "tensorflow>=2.14.0",
    "tensorflow-datasets>=4.9.8",
    "tensorflow-hub>=0.16.1",
    "tensorflow-serving-api>=2.14.0",
    "torch>=2.7.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "urlextract>=1.9.0",
    "wheel>=0.45.1",
    "widgetsnbextension>=4.0.14",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.36.0",
]

[tool.uv.workspace]
members = ["DAML_project"]
